# winapi-hooking-rust

./: README.md  test_all.ps1
exe/: Cargo.toml
exe/src/: cli.rs  instructions.rs  main.rs
exe/src/funcs/: mod.rs
exe/src/funcs/create_file_w/: mod.rs
exe/src/funcs/exit_process/: mod.rs
exe/src/funcs/get_clipboard_data/: mod.rs
exe/src/funcs/get_cursor_pos/: mod.rs
exe/src/funcs/get_system_time_as_file_time/: mod.rs
exe/src/funcs/is_debugger_present/: mod.rs
exe/src/funcs/message_box_a/: mod.rs
exe/src/funcs/nt_open_process/: mod.rs
exe/src/funcs/nt_query_system_information/: mod.rs
exe/src/funcs/sleep/: mod.rs
exe/src/funcs/virtual_alloc_ex/: mod.rs
